--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker: ^8.1.7
   permission_handler: ^11.3.1
   path_provider: ^2.1.5
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
