--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   permission_handler: ^11.3.1
   path_provider: ^2.1.5
   image_picker: ^1.1.2
-
+  image: ^4.5.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
