--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path_provider: ^2.1.5
   image_picker: ^1.1.2
   image: ^4.5.2
+  provider: ^6.1.2
+  syncfusion_flutter_pdfviewer: ^28.1.37
 dev_dependencies:
   flutter_test:
     sdk: flutter
