--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mongoose": "^8.9.2",
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1"
   }
 }
